Generation auto de JAR + Correction probleme classpath + chemins relatifs